# niribar

./: Cargo.toml  README.md  build.rs  flake.nix  rustfmt.toml
assets/: resources.xml
src/: icons.rs  main.rs  style.css
src/bar/: bluetooth.rs  clock.rs  mod.rs  network.rs  overview.rs  volume.rs
src/bar/mediaplayer/: mediaplayer.blp  mod.rs  single_media_player.rs  widget.rs
src/bar/taskbar/: mod.rs  niri.rs  niri_window_widget.blp  niri_workspace_widget.blp  widgets.rs
src/popups/: launcher.blp  launcher.rs  mod.rs
src/popups/bluetooth/: device.rs  mod.rs
src/popups/clock/: clock.blp  mod.rs  weather.rs
src/popups/launcher/: folder_button.rs  image.rs  launcher.blp  mod.rs
src/popups/mediaplayer/: mod.rs
src/popups/volume/: device.rs  mod.rs
