[package]
name = "niribar"
version = "0.1.0"
edition = "2024"

[dependencies]
astal-bluetooth = "0.1.0"
astal-io = { version = "0.1.0", features = ["gio_v2_80"] }
astal-mpris = "0.1.0"
astal-network = "0.1.0"
astal-wp = "0.1.0"
astal4 = { version = "0.1.0", features = ["gio_v2_80", "gtk_v4_22", "v4_22"] }
async-channel = "2.5.0"
async-stream = "0.3.6"
bimap = "0.6.3"
clap = { version = "4.5.53", features = ["derive"] }
const_format = "0.2.35"
futures = "0.3.31"
glib = { version = "0.21.5", features = ["v2_86"] }
gtk4 = { version = "0.10.3", features = ["blueprint", "gio_v2_80", "v4_20"] }
lazy-regex = { version = "3.4.2", features = ["std"] }
libnm-api = "0.1.0"
niri-ipc = "25.11.0"
strum = { version = "0.27.2", features = ["derive"] }
sysinfo = "0.37.2"

[build-dependencies]
glib-build-tools = "0.21.0"
heck = "0.5.0"
